Delete old files

--- a/auth.ipynb
+++ b/auth.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0a049c34-b641-4b10-a228-b7c3f932a15e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Install libs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -37,7 +53,7 @@
     }
    },
    "source": [
-    "# Set environment variables"
+    "# Setup environment variables"
    ]
   },
   {
@@ -62,6 +78,22 @@
     "\n",
     "os.environ[\"STRAVA_CLIENT_ID\"] = dbutils.secrets.get(scope = \"strava\", key = \"client_id\")\n",
     "os.environ[\"STRAVA_CLIENT_SECRET\"] = dbutils.secrets.get(scope = \"strava\", key = \"client_secret\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5edffb18-8b08-40e7-959b-4fb7ff22b44c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Instantiate a client object"
    ]
   },
   {
