Remove expires_at print

--- a/auth.ipynb
+++ b/auth.ipynb
@@ -126,8 +126,7 @@
     "\n",
     "# --- API call ---\n",
     "athlete = client.get_athlete()\n",
-    "print(f\"Hi, {athlete.firstname} Welcome to stravalib!\")\n",
-    "print(\"expires_at =\", client.token_expires)"
+    "print(f\"Hi, {athlete.firstname} Welcome to stravalib!\")"
    ]
   }
  ],
