Create bronze strava activities

--- a/bronze_strava_activities.ipynb
+++ b/bronze_strava_activities.ipynb
@@ -41,63 +41,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5c266de4-9827-4741-9a9d-69f89461dd59",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# import time\n",
-    "\n",
-    "# from databricks.sdk import WorkspaceClient\n",
-    "\n",
-    "# w = WorkspaceClient()\n",
-    "\n",
-    "# scope_name = \"strava\"\n",
-    "# key_name = \"expires_at\"\n",
-    "# string_value = \"1754940168\"\n",
-    "\n",
-    "# w.secrets.put_secret(scope=scope_name, key=key_name, string_value=string_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c0074670-157f-4a1f-8901-1acc0597092c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# new_tokens = client.refresh_access_token(\n",
-    "#     client_id=dbutils.secrets.get(scope = \"strava\", key = \"client_id\"),\n",
-    "#     client_secret=dbutils.secrets.get(scope = \"strava\", key = \"client_secret\"),\n",
-    "#     refresh_token=dbutils.secrets.get(scope = \"strava\", key = \"refresh_token\")\n",
-    "# )\n",
-    "# print(new_tokens[\"expires_at\"])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -193,8 +136,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -202,16 +144,14 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "96f3dbb2-2d53-44ac-9e62-a73514c319ec",
+     "nuid": "e8c3a4fd-e001-486b-8774-0ab23c9fad30",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "activities = client.get_activities()\n",
-    "print(activities)"
+    "# Save data to catalog"
    ]
   },
   {
@@ -224,7 +164,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "59ec48fd-562c-4117-a008-549f3ca4e1e3",
+     "nuid": "ec15f001-fc91-4984-b948-2b950fa9760d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -232,8 +172,37 @@
    },
    "outputs": [],
    "source": [
-    "for i, activity in enumerate(activities):\n",
-    "    print(activity.name)"
+    "from pyspark.sql.types import StructType, StructField, StringType, TimestampType, DoubleType, IntegerType\n",
+    "\n",
+    "activity_schema = StructType([\n",
+    "    StructField(\"id\", StringType(), False),\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"start_date_local\", TimestampType(), True),\n",
+    "    StructField(\"average_speed_mps\", DoubleType(), True),\n",
+    "    StructField(\"distance_m\", DoubleType(), True),\n",
+    "    StructField(\"total_elevation_gain_m\", DoubleType(), True),\n",
+    "    StructField(\"sport_type\", StringType(), True),\n",
+    "    StructField(\"pr_count\", IntegerType(), True),\n",
+    "    StructField(\"kudos_count\", IntegerType(), True)\n",
+    "])\n",
+    "\n",
+    "\n",
+    "activities_list = []\n",
+    "for activity in client.get_activities():\n",
+    "    activities_list.append({\n",
+    "        \"id\": str(activity.id),\n",
+    "        \"name\": activity.name,\n",
+    "        \"start_date_local\": activity.start_date_local,\n",
+    "        \"average_speed_mps\": float(activity.average_speed) if activity.average_speed else None,\n",
+    "        \"distance_m\": float(activity.distance) if activity.distance else None,\n",
+    "        \"total_elevation_gain_m\": float(activity.total_elevation_gain) if activity.total_elevation_gain else None,\n",
+    "        \"sport_type\": activity.sport_type,\n",
+    "        \"pr_count\": int(activity.pr_count) if activity.pr_count is not None else None,\n",
+    "        \"kudos_count\": int(activity.kudos_count) if activity.kudos_count is not None else None\n",
+    "    })\n",
+    "\n",
+    "df = spark.createDataFrame(activities_list, schema=activity_schema)\n",
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"workspace.default.bronze_strava_activities\")"
    ]
   }
  ],
@@ -250,7 +219,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "auth",
+   "notebookName": "bronze_strava_activities",
    "widgets": {}
   },
   "language_info": {
