Add silver layer to transform units

--- a/bronze_strava_activities.ipynb
+++ b/bronze_strava_activities.ipynb
@@ -202,7 +202,7 @@
     "    })\n",
     "\n",
     "df = spark.createDataFrame(activities_list, schema=activity_schema)\n",
-    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"workspace.default.bronze_strava_activities\")"
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"workspace.strava.bronze_activities\")"
    ]
   }
  ],
