Create notebook folder and fill readme

--- a/notebooks/silver_strava_activities.ipynb
+++ b/notebooks/silver_strava_activities.ipynb
@@ -51,7 +51,9 @@
     "  average_speed_mps * 3.6 AS average_speed_kmh,\n",
     "  distance_m / 1000 AS distance_km,\n",
     "  total_elevation_gain_m,\n",
-    "  regexp_replace(sport_type, \"root='|'\",\"\") AS sport_type\n",
+    "  regexp_replace(sport_type, \"root='|'\",\"\") AS sport_type,\n",
+    "  pr_count,\n",
+    "  kudos_count\n",
     "FROM workspace.strava.bronze_activities"
    ]
   },
@@ -91,7 +93,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8301184387190640,
+     "commandId": 8301184387190613,
      "dataframes": [
       "_sqldf"
      ]
